--- a/.config/hypr/custom/keybinds.conf
+++ b/.config/hypr/custom/keybinds.conf
@@ -1,18 +1,40 @@
 # You can put your preferred keybinds here
 # https://wiki.hyprland.org/Configuring/Binds/
 
+# Session
+bind = Super, X, exec, hyprlock
+
+# Media
+bindl = ,XF86AudioMute, exec, ~/.local/bin/volume_mute.sh # [hidden]
+bindle=, XF86AudioRaiseVolume, exec, ~/.local/bin/volume_up.sh # [hidden]
+bindle=, XF86AudioLowerVolume, exec, ~/.local/bin/volume_down.sh # [hidden]
+
 # Terminal
 bind=SUPER,RETURN,exec,alacritty
 bind=SUPER,t,exec,foot
 
 # Launchers
-bind=Shift,Space, exec, anyrun
+bind=Shift,Space, exec, fuzzel
 
 # Workspace navigation
 bind = Ctrl+Alt, Right, workspace, +1 # [hidden]
 bind = Ctrl+Alt, Left, workspace, -1 # [hidden]
 bind = Ctrl+Alt, l, workspace, +1 # [hidden]
 bind = Ctrl+Alt, h, workspace, -1 # [hidden]
+
+##! Workspace management
+# Move window to workspace Super + Alt + [0-9]
+#/# bind = Super+Alt, Hash,, # Window: move to workspace # (1, 2, 3, 4, ...)
+bind = Shift+Alt, 1, exec, ~/.config/ags/scripts/hyprland/workspace_action.sh movetoworkspacesilent 1 # [hidden]
+bind = Shift+Alt, 2, exec, ~/.config/ags/scripts/hyprland/workspace_action.sh movetoworkspacesilent 2 # [hidden]
+bind = Shift+Alt, 3, exec, ~/.config/ags/scripts/hyprland/workspace_action.sh movetoworkspacesilent 3 # [hidden]
+bind = Shift+Alt, 4, exec, ~/.config/ags/scripts/hyprland/workspace_action.sh movetoworkspacesilent 4 # [hidden]
+bind = Shift+Alt, 5, exec, ~/.config/ags/scripts/hyprland/workspace_action.sh movetoworkspacesilent 5 # [hidden]
+bind = Shift+Alt, 6, exec, ~/.config/ags/scripts/hyprland/workspace_action.sh movetoworkspacesilent 6 # [hidden]
+bind = Shift+Alt, 7, exec, ~/.config/ags/scripts/hyprland/workspace_action.sh movetoworkspacesilent 7 # [hidden]
+bind = Shift+Alt, 8, exec, ~/.config/ags/scripts/hyprland/workspace_action.sh movetoworkspacesilent 8 # [hidden]
+bind = Shift+Alt, 9, exec, ~/.config/ags/scripts/hyprland/workspace_action.sh movetoworkspacesilent 9 # [hidden]
+bind = Shift+Alt, 0, exec, ~/.config/ags/scripts/hyprland/workspace_action.sh movetoworkspacesilent 10 # [hidden]
 
 # Special workspaces
 bind=ALT,b,movetoworkspace,special:btop
