--- a/.config/hypr/custom/plugins.conf
+++ b/.config/hypr/custom/plugins.conf
@@ -233,3 +233,20 @@ bind = $mainMod CTRL, M, scroller:marksreset
 # Pin and Unpin
 # bind = $mainMod, P, scroller:pin,
 # bind = $mainMod SHIFT, P, scroller:unpin,
+
+# Hyprtasking #
+# bind = $mainMod, space, hyprtasking:toggle, all
+bind = $mainMod, space, hyprtasking:toggle, cursor
+
+# bind = $mainMod, Shift, h, hyprtasking:move, left
+# bind = $mainMod, Shift, j, hyprtasking:move, down
+# bind = $mainMod, Shift,k, hyprtasking:move, up
+# bind = $mainMod, Shift,l, hyprtasking:move, right
+
+plugin {
+    hyprtasking {
+        rows = 3
+        exit_behavior = original hovered interacted
+        gap_size = 8
+    }
+}
