--- a/.config/hypr/hyprland/keybinds.conf
+++ b/.config/hypr/hyprland/keybinds.conf
@@ -2,11 +2,11 @@
 # Lines starting with #! are section headings
 
 bindl = Alt ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_SOURCE@ toggle # [hidden]
-bindl = Super ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_SOURCE@ toggle # [hidden]
-bindl = ,XF86AudioMute, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 0% # [hidden]
-bindl = Super+Shift,M, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 0% # [hidden]
-bindle=, XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+ # [hidden]
-bindle=, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%- # [hidden]
+bindl = Super ,XF86AudioMute, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 0% # [hidden]
+# bindl = ,XF86AudioMute, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 0% # [hidden]
+# bindl = Super+Shift,M, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 0% # [hidden]
+# bindle=, XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+ # [hidden]
+# bindle=, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%- # [hidden]
 
 # Uncomment these if you can't get AGS to work
 #bindle=, XF86MonBrightnessUp, exec, brightnessctl set '12.75+'
@@ -15,7 +15,7 @@ bindle=, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%- #
 #!
 ##! Essentials for beginners
 
-bind = Super, T, exec, foot # Launch foot (terminal)
+# bind = Super, T, exec, foot # Launch foot (terminal)
 bind = , Super, exec, true # Open app launcher
 bind = Ctrl+Super, T, exec, ~/.config/ags/scripts/color_generation/switchwall.sh # Change wallpaper
 ##! Actions
@@ -34,12 +34,12 @@ bind = Super+Shift, C, exec, hyprpicker -a # Pick color (Hex) >> clipboard
 bindl=,Print,exec,grim - | wl-copy # Screenshot >> clipboard
 bindl= Ctrl,Print, exec, mkdir -p ~/Pictures/Screenshots && ~/.config/ags/scripts/grimblast.sh copysave screen ~/Pictures/Screenshots/Screenshot_"$(date '+%Y-%m-%d_%H.%M.%S')".png # Screenshot >> clipboard & file
 # Recording stuff
-bind = Super+Alt, R, exec, ~/.config/ags/scripts/record-script.sh # Record region (no sound)
-bind = Ctrl+Alt, R, exec, ~/.config/ags/scripts/record-script.sh --fullscreen # [hidden] Record screen (no sound)
-bind = Super+Shift+Alt, R, exec, ~/.config/ags/scripts/record-script.sh --fullscreen-sound # Record screen (with sound)
+# bind = Super+Alt, R, exec, ~/.config/ags/scripts/record-script.sh # Record region (no sound)
+# bind = Ctrl+Alt, R, exec, ~/.config/ags/scripts/record-script.sh --fullscreen # [hidden] Record screen (no sound)
+# bind = Super+Shift+Alt, R, exec, ~/.config/ags/scripts/record-script.sh --fullscreen-sound # Record screen (with sound)
 ##! Session
 bind = Ctrl+Super, L, exec, ags run-js 'lock.lock()' # [hidden]
-bind = Super, X, exec, loginctl lock-session # Lock
+# bind = Super, X, exec, loginctl lock-session # Lock
 # bind = Super+Shift, L, exec, loginctl lock-session # [hidden]
 # bindl = Super+Shift, L, exec, sleep 0.1 && systemctl suspend || loginctl suspend # Suspend system
 bind = Ctrl+Shift+Alt+Super, Delete, exec, systemctl poweroff || loginctl poweroff # [hidden] Power off
@@ -113,18 +113,6 @@ bind = Super, S, togglespecialworkspace,
 bind = Super, mouse:275, togglespecialworkspace,
 
 ##! Workspace management
-# Move window to workspace Super + Alt + [0-9]
-#/# bind = Super+Alt, Hash,, # Window: move to workspace # (1, 2, 3, 4, ...)
-bind = Super+Alt, 1, exec, ~/.config/ags/scripts/hyprland/workspace_action.sh movetoworkspacesilent 1 # [hidden]
-bind = Super+Alt, 2, exec, ~/.config/ags/scripts/hyprland/workspace_action.sh movetoworkspacesilent 2 # [hidden]
-bind = Super+Alt, 3, exec, ~/.config/ags/scripts/hyprland/workspace_action.sh movetoworkspacesilent 3 # [hidden]
-bind = Super+Alt, 4, exec, ~/.config/ags/scripts/hyprland/workspace_action.sh movetoworkspacesilent 4 # [hidden]
-bind = Super+Alt, 5, exec, ~/.config/ags/scripts/hyprland/workspace_action.sh movetoworkspacesilent 5 # [hidden]
-bind = Super+Alt, 6, exec, ~/.config/ags/scripts/hyprland/workspace_action.sh movetoworkspacesilent 6 # [hidden]
-bind = Super+Alt, 7, exec, ~/.config/ags/scripts/hyprland/workspace_action.sh movetoworkspacesilent 7 # [hidden]
-bind = Super+Alt, 8, exec, ~/.config/ags/scripts/hyprland/workspace_action.sh movetoworkspacesilent 8 # [hidden]
-bind = Super+Alt, 9, exec, ~/.config/ags/scripts/hyprland/workspace_action.sh movetoworkspacesilent 9 # [hidden]
-bind = Super+Alt, 0, exec, ~/.config/ags/scripts/hyprland/workspace_action.sh movetoworkspacesilent 10 # [hidden]
 
 bind = Ctrl+Super+Shift, Up, movetoworkspacesilent, special # [hidden]
 
@@ -192,7 +180,7 @@ bindl= ,XF86AudioPause, exec, playerctl play-pause # [hidden]
 
 #!
 ##! Apps
-bind = Super, T, exec, # Launch foot (terminal)
+# bind = Super, T, exec, # Launch foot (terminal)
 bind = Super, Z, exec, Zed # Launch Zed (editor)
 bind = Super, C, exec, code --password-store=gnome --enable-features=UseOzonePlatform --ozone-platform=wayland # Launch VSCode (editor)
 bind = Super, E, exec, nautilus --new-window # Launch Nautilus (file manager)
