--- a/.config/alacritty/fonts.toml
+++ b/.config/alacritty/fonts.toml
@@ -2,13 +2,13 @@
 size = 10.8
 
 builtin_box_drawing = true
-offset = { x = 0, y = 0 }
+offset = { x = 0, y = 3 }
 
-normal = { family = "SpaceMono Nerd Font", style = "Regular" } 
-bold = { family = "SpaceMono Nerd Font", style = "Regular" }
-italic = { family = "SpaceMono Nerd Font", style = "Italic" }
+# normal = { family = "SpaceMono Nerd Font", style = "Regular" } 
+# bold = { family = "SpaceMono Nerd Font", style = "Regular" }
+# italic = { family = "SpaceMono Nerd Font", style = "Italic" }
 # bold_italic = { family = "FiraCode Nerd Font", style = "Bold Italic" }
 
-# normal = { family = "FiraCode Nerd Font", style = "Regular" } 
-# bold = { family = "FiraCode Nerd Font", style = "Regular" }
-# italic = { family = "FiraCode Nerd Font", style = "Italic" }
+normal = { family = "FiraCode Nerd Font", style = "Regular" } 
+bold = { family = "FiraCode Nerd Font", style = "Regular" }
+italic = { family = "FiraCode Nerd Font", style = "Italic" }
