--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -26,7 +26,7 @@ bold_font        auto
 bold_italic_font auto
 
 # Font size (in pts)
-font_size        11.0
+font_size        10.8
 
 # The amount the font size is changed by (in pts) when increasing/decreasing
 # the font size in a running terminal.
@@ -40,7 +40,7 @@ confirm_os_window_close 0
 # (number followed by %), which are interpreted as percentages of the
 # unmodified values. You can use negative pixels or percentages less than
 # 100% to reduce sizes (but this might cause rendering artifacts).
-adjust_line_height 0
+adjust_line_height 1
 adjust_column_width 0
 
 # Symbol mapping (special font for specified unicode code points). Map the
@@ -230,7 +230,7 @@ inactive_tab_font_style normal
 foreground       #abb2bf
 
 # The background color
-background       #1e1e2e
+background       #181825
 # background       #181c26
 # background #1E1E2E
 
