--- a/.config/yazi/package.toml
+++ b/.config/yazi/package.toml
@@ -1,5 +1,5 @@
 [plugin]
-deps = [{ use = "yazi-rs/plugins#full-border", commit = "a3ee717" }, { use = "yazi-rs/plugins:full-border", rev = "71c4fc2" }, { use = "h-hg/yamb", rev = "108347b" }]
+deps = [{ use = "yazi-rs/plugins#full-border", commit = "a3ee717" }, { use = "yazi-rs/plugins:full-border", rev = "71c4fc2" }, { use = "h-hg/yamb", rev = "108347b" }, { use = "yazi-rs/plugins:max-preview", rev = "71c4fc2" }, { use = "yazi-rs/plugins:git", rev = "71c4fc2" }, { use = "Ape/open-with-cmd", rev = "a80d1cf" }]
 
 [flavor]
 deps = []
