--- a/.config/bspwm/polybar/forest/config.ini
+++ b/.config/bspwm/polybar/forest/config.ini
@@ -23,10 +23,10 @@ margin-top = 0
 ;; File Inclusion
 ; include an external file, like module file, etc.
 
-include-file = ~/.config/i3/polybar/forest/bars.ini
-include-file = ~/.config/i3/polybar/forest/colors.ini
-include-file = ~/.config/i3/polybar/forest/modules.ini
-include-file = ~/.config/i3/polybar/forest/user_modules.ini
+include-file = ~/.config/bspwm/polybar/forest/bars.ini
+include-file = ~/.config/bspwm/polybar/forest/colors.ini
+include-file = ~/.config/bspwm/polybar/forest/modules.ini
+include-file = ~/.config/bspwm/polybar/forest/user_modules.ini
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
@@ -61,15 +61,15 @@ fixed-center = true
 ; the percentage can optionally be extended with a pixel offset like so:
 ; 50%:-10, this will result in a width or height of 50% minus 10 pixels
 ; width = 1905
-width = 100%
+width = 99%
 height = 30
 
 ; Offset defined as pixel value (e.g. 35) or percentage (e.g. 50%)
 ; the percentage can optionally be extended with a pixel offset like so:
 ; 50%:-10, this will result in an offset in the x or y direction 
 ; of 50% minus 10 pixels
-offset-x = 0
-offset-y = 0
+offset-x = 0.5%
+offset-y = 0.5%
 
 ; Background ARGB color (e.g. #f00, #ff992a, #ddff1023)
 background = ${color.background}
@@ -140,7 +140,7 @@ font-2 = "feather:size=12;3"
 ;   modules-center = xwindow xbacklight
 ;   modules-right = ipc clock
 
-modules-left = mod xworkspaces sep bspwm sep xwindow
+modules-left = mod bspwm sep xwindow
 modules-center = polywins
 modules-right =  volume brightness sep temperature date sep systray
 
@@ -156,7 +156,7 @@ dim-value = 1.0
 ; If the value is empty or undefined, the atom value
 ; will be created from the following template: polybar-[BAR]_[MONITOR]
 ; NOTE: The placeholders are not available for custom values
-wm-name = 
+wm-name = bspwm
 
 ; Locale used to localize various module data (e.g. date)
 ; Expects a valid libc locale, for example: sv_SE.UTF-8
