--- a/.config/bspwm/polybar.exodia/ChadWM/config
+++ b/.config/bspwm/polybar.exodia/ChadWM/config
@@ -75,7 +75,7 @@ font-4 = "Iosevka Nerd Font:size=18;4"
 
 modules-left   = xdomenu space LDD bspwm LDD space ethernet space mod space LDD xkeyboard LDD space notification-github space space info-cava
 modules-center = LDD mpd LDD
-modules-right  = updates-pacman space LDD volume spaceD backlight LDD space RDD battery space cpu space cpuTemp space network space PLDD date PLD
+modules-right  = updates-pacman space LDD volume spaceD bna LDD space  cpu  space network space PLDD date PLD
 
 separator =
 spacing = 0
