--- a/.config/bspwm/polybar/forest/modules.ini
+++ b/.config/bspwm/polybar/forest/modules.ini
@@ -1191,20 +1191,20 @@ label-monitor = %name%
 
 label-focused = %name%
 label-focused-foreground = ${color.background}
-label-focused-background = ${color.blue}
-;label-focused-underline = ${color.RED}
+label-focused-background = ${color.pink}
+label-focused-underline = ${color.red}
 label-focused-padding = 1
 
 label-occupied = %name%
 label-occupied-foreground = ${color.background}
-label-occupied-background = ${color.green}
-;label-occupied-underline = ${color.GREEN}
+label-occupied-background = ${color.blue}
+label-occupied-underline = ${color.green}
 label-occupied-padding = 1
 
 label-urgent = %name%
 label-urgent-foreground = ${color.background}
 label-urgent-background = ${color.red}
-;label-urgent-underline = ${color.RED}
+label-urgent-underline = ${color.red}
 label-urgent-padding = 1
 
 label-empty = %name%
@@ -1212,7 +1212,7 @@ label-empty-foreground = ${color.foreground}
 label-empty-padding = 1
 
 ; Separator in between workspaces
-label-separator = " "
+label-separator = ""
 label-separator-padding = 0
 ;label-separator-foreground = ${color.YELLOW}
 
