--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -17,11 +17,16 @@ include-file = $HOME/.config/polybar/mocha.ini
 ;
 
 [bar/bar1]
-width          = 100%
-height         = 30
-;radius        = 10
-;dpi           = 96
-fixed-center   = true
+; width          = 100%
+; height         = 30
+; ;radius        = 10
+; ;dpi           = 96
+; fixed-center   = true
+
+width = 99%
+height = 30
+offset-x = 0.5%
+offset-y = 0.5%
 
 background     = ${colors.mantle}
 foreground     = ${colors.foreground}
@@ -49,6 +54,8 @@ modules-right  = pulseaudio cpu memory filesystem systray
 cursor-click   = pointer
 cursor-scroll  = ns-resize
 
+wm-name = bspwm
+wm-restack = bspwm
 enable-ipc     = true
 
 ;separator = |
