--- a/.config/bspwm/polybar/forest/bars.ini
+++ b/.config/bspwm/polybar/forest/bars.ini
@@ -8,8 +8,11 @@
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 [bar]
-fill = ⏽
-empty = ⏽
+; fill =  
+; empty =  
+; indicator = " "
+fill = ⏽ 
+empty = ⏽ 
 indicator = 
 ; Nerd font :   ,  ⏽,  樂 籠 錄 , 雷 絛
 
@@ -96,8 +99,8 @@ bar-volume-fill = ${bar.fill}
 bar-volume-fill-font = 2
 bar-volume-foreground-0 = ${color.teal}
 bar-volume-foreground-1 = ${color.teal}
-bar-volume-foreground-2 = ${color.teal}
-bar-volume-foreground-3 = ${color.teal}
+bar-volume-foreground-2 = ${color.peach}
+bar-volume-foreground-3 = ${color.peach}
 bar-volume-foreground-4 = ${color.red}
 
 bar-volume-empty = ${bar.empty}
@@ -118,8 +121,8 @@ type = internal/backlight
 
 ; Use the following command to list available cards:
 ; $ ls -1 /sys/class/backlight/
-card = intel_backlight
-; card = amdgpu_bl0
+; card = intel_backlight
+card = amdgpu_bl0
 
 ; Available tags:
 ;   <label> (default)
@@ -137,7 +140,7 @@ ramp-1 = 
 ramp-2 = 
 ramp-3 = 
 ramp-4 = 
-ramp-foreground = ${color.lime}
+ramp-foreground = ${color.green}
 
 ; Only applies if <bar> is used
 bar-format = "%fill%%indicator%%empty%"
@@ -291,8 +294,8 @@ bar-load-indicator-foreground = ${color.foreground}
 
 bar-load-fill = ${bar.fill}
 bar-load-fill-font = 2
-bar-load-foreground-0 = ${color.green}
-bar-load-foreground-1 = ${color.green}
+bar-load-foreground-0 = ${color.teal}
+bar-load-foreground-1 = ${color.teal}
 bar-load-foreground-2 = ${color.yellow}
 bar-load-foreground-3 = ${color.yellow}
 bar-load-foreground-4 = ${color.red}
@@ -330,7 +333,7 @@ fixed-values = false
 ;   <ramp-capacity>
 format-mounted = <bar-used><label-mounted>
 format-mounted-prefix = 
-format-mounted-prefix-foreground = ${color.purple}
+format-mounted-prefix-foreground = ${color.mauve}
 
 ; Available tags:
 ;   <label-unmounted> (default)
@@ -366,10 +369,10 @@ bar-used-indicator-foreground = ${color.foreground}
 
 bar-used-fill = ${bar.fill}
 bar-used-fill-font = 2
-bar-used-foreground-0 = ${color.green}
-bar-used-foreground-1 = ${color.green}
-bar-used-foreground-2 = ${color.yellow}
-bar-used-foreground-3 = ${color.yellow}
+bar-used-foreground-0 = ${color.teal}
+bar-used-foreground-1 = ${color.teal}
+bar-used-foreground-2 = ${color.peach}
+bar-used-foreground-3 = ${color.peach}
 bar-used-foreground-4 = ${color.red}
 
 bar-used-empty = ${bar.empty}
@@ -417,7 +420,7 @@ format-prefix-foreground = ${color.indigo}
 ;   %gb_swap_free%
 ;   %gb_swap_used%
 
-label = " %mb_used%"
+label = " %gb_used%"
 
 ; Only applies if <bar-used> is used
 bar-used-format = " %fill%%indicator%%empty%"
@@ -430,10 +433,10 @@ bar-used-indicator-foreground = ${color.foreground}
 
 bar-used-fill = ${bar.fill}
 bar-used-fill-font = 2
-bar-used-foreground-0 = ${color.green}
-bar-used-foreground-1 = ${color.green}
-bar-used-foreground-2 = ${color.yellow}
-bar-used-foreground-3 = ${color.yellow}
+bar-used-foreground-0 = ${color.teal}
+bar-used-foreground-1 = ${color.teal}
+bar-used-foreground-2 = ${color.peach}
+bar-used-foreground-3 = ${color.peach}
 bar-used-foreground-4 = ${color.red}
 
 bar-used-empty = ${bar.empty}
