--- a/.config/bspwm/polybar/forest/config.ini
+++ b/.config/bspwm/polybar/forest/config.ini
@@ -61,15 +61,15 @@ fixed-center = true
 ; the percentage can optionally be extended with a pixel offset like so:
 ; 50%:-10, this will result in a width or height of 50% minus 10 pixels
 ; width = 1905
-width = 99%
+width = 100%
 height = 30
 
 ; Offset defined as pixel value (e.g. 35) or percentage (e.g. 50%)
 ; the percentage can optionally be extended with a pixel offset like so:
 ; 50%:-10, this will result in an offset in the x or y direction 
 ; of 50% minus 10 pixels
-offset-x = 0.5%
-offset-y = 0.5%
+offset-x = 0.0%
+offset-y = 0.0%
 
 ; Background ARGB color (e.g. #f00, #ff992a, #ddff1023)
 background = ${color.background}
@@ -93,7 +93,7 @@ radius-bottom = 0.0
 ; Individual values can be defined using:
 ;   {overline,underline}-size
 ;   {overline,underline}-color
-line-size = 0
+line-size = 2
 line-color = ${color.background}
 
 ; Values applied to all borders
@@ -140,9 +140,9 @@ font-2 = "feather:size=12;3"
 ;   modules-center = xwindow xbacklight
 ;   modules-right = ipc clock
 
-modules-left = mod bspwm sep xwindow
-modules-center = polywins
-modules-right =  volume brightness sep temperature date sep systray
+modules-left = mod polywins sep cava
+modules-center = bspwm 
+modules-right =  volume memory_bar filesystem_bar sep date sep systray
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
