--- a/.config/bspwm/polybar/forest/modules.ini
+++ b/.config/bspwm/polybar/forest/modules.ini
@@ -1119,7 +1119,7 @@ label-empty-padding = 1
 
 [module/polywins]
 type = custom/script
-exec = /home/mattia/.dotfiles/.config/bspwm/polybar/forest/polywins/polywins.sh 2>/dev/null
+exec = ~/.config/bspwm/polybar/forest/polywins/polywins.sh 2>/dev/null
 format = <label>
 label = %output%
 label-padding = 1
@@ -1138,7 +1138,7 @@ show="window_classname"
 type = internal/bspwm
 
 format = <label-mode>
-format-background = ${color.foreground}
+format-background = ${color.teal}
 format-foreground = ${color.background}
 format-padding = 1
 
@@ -1172,7 +1172,7 @@ fuzzy-match = true
 ;;ws-icon-2 = graphics;♜
 ;;ws-icon-3 = mail;♝
 ;;ws-icon-4 = web;♞
-;;ws-icon-default = ♟
+ws-icon-default =  
 
 format = <label-state>
 
@@ -1189,25 +1189,25 @@ label-monitor = %name%
 ;label-dimmed-underline = ${color.YELLOW}
 ;label-dimmed-focused-background = ${color.BACKGROUND}
 
-label-focused = %name%
-label-focused-foreground = ${color.background}
-label-focused-background = ${color.pink}
-label-focused-underline = ${color.red}
+label-focused = 
+label-focused-foreground = ${color.foreground}
+; label-focused-background = ${color.pink}
+; label-focused-underline = ${color.red}
 label-focused-padding = 1
 
-label-occupied = %name%
-label-occupied-foreground = ${color.background}
-label-occupied-background = ${color.blue}
-label-occupied-underline = ${color.green}
+label-occupied = 
+label-occupied-foreground = ${color.foreground}
+; label-occupied-background = ${color.surface0}
+; label-occupied-underline = ${color.green}
 label-occupied-padding = 1
 
-label-urgent = %name%
+label-urgent = 
 label-urgent-foreground = ${color.background}
 label-urgent-background = ${color.red}
 label-urgent-underline = ${color.red}
 label-urgent-padding = 1
 
-label-empty = %name%
+label-empty = 
 label-empty-foreground = ${color.foreground}
 label-empty-padding = 1
 
