--- a/.config/bspwm/polybar/forest/user_modules.ini
+++ b/.config/bspwm/polybar/forest/user_modules.ini
@@ -261,3 +261,12 @@ format-underline = #1db954
 click-left = playerctl --player=spotify play-pause 
 click-right = playerctl --player=spotify next 
 click-middle = playerctl --player=spotify previous 
+
+[module/cava]
+type = custom/script
+tail = true
+exec = $HOME/.config/bspwm/polybar/forest/scripts/cava.sh
+format = <label>
+format-font = 5
+label = %output%
+label-foreground = #94e2d5
