--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -114,8 +114,7 @@ rules: (
 	},
 
 	{
-		match = "class_g = 'Polybar'	|| "
-				"class_g = 'eww-bar'	|| "
+		match = "class_g = 'eww-bar'	|| "
 				"class_g = 'Viewnior'	|| "
 				"class_g = 'mpv'		|| "
 				"class_g = 'scratch'	|| "
