--- a/.config/bspwm/polybar/forest/config.ini
+++ b/.config/bspwm/polybar/forest/config.ini
@@ -24,7 +24,7 @@ margin-top = 0
 ; include an external file, like module file, etc.
 
 include-file = ~/.config/bspwm/polybar/forest/bars.ini
-include-file = ~/.config/bspwm/polybar/forest/colors.ini
+include-file = ~/.config/bspwm/polybar/forest/mocha.ini
 include-file = ~/.config/bspwm/polybar/forest/modules.ini
 include-file = ~/.config/bspwm/polybar/forest/user_modules.ini
 
@@ -68,8 +68,8 @@ height = 30
 ; the percentage can optionally be extended with a pixel offset like so:
 ; 50%:-10, this will result in an offset in the x or y direction 
 ; of 50% minus 10 pixels
-offset-x = 0.0%
-offset-y = 0.0%
+offset-x = 0%
+offset-y = 0%
 
 ; Background ARGB color (e.g. #f00, #ff992a, #ddff1023)
 background = ${color.background}
@@ -107,13 +107,13 @@ line-color = ${color.background}
 ; the border is placed withing this area. So you effectively only have the
 ; following horizontal space on the bar:
 ;   width - border-right-size - border-left-size
-border-bottom-size = 0
-border-bottom-color = ${color.foreground}
+border-size = 0
+border-color = ${color.background}
 
 ; Number of spaces to add at the beginning/end of the bar
 ; Individual side values can be defined using:
 ;   padding-{left,right}
-padding = 2
+padding = 0
 
 ; Number of spaces to add before/after each module
 ; Individual side values can be defined using:
@@ -140,8 +140,8 @@ font-2 = "feather:size=12;3"
 ;   modules-center = xwindow xbacklight
 ;   modules-right = ipc clock
 
-modules-left = mod polywins sep cava
-modules-center = bspwm 
+modules-left = mod bspwm sep cava
+modules-center = now-playing
 modules-right =  volume memory_bar filesystem_bar sep date sep systray
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
