--- a/.config/bspwm/polybar/forest/modules.ini
+++ b/.config/bspwm/polybar/forest/modules.ini
@@ -1138,7 +1138,7 @@ show="window_classname"
 type = internal/bspwm
 
 format = <label-mode>
-format-background = ${color.teal}
+format-background = ${color.blue}
 format-foreground = ${color.background}
 format-padding = 1
 
