--- a/.config/cava/config
+++ b/.config/cava/config
@@ -117,7 +117,7 @@ method = ncurses
 # ncurses output method and a terminal that can change color definitions such as Gnome-terminal or rxvt.
 # if supported, ncurses mode will be forced on if user defined colors are used.
 # default is to keep current terminal color
-background = '#181825'
+background = default
 foreground = '#94e2d5'
 
 # Gradient mode, only hex defined colors (and thereby ncurses mode) are supported,
