--- a/.config/yazi/yazi.toml
+++ b/.config/yazi/yazi.toml
@@ -117,6 +117,18 @@ prepend_previewers = [
 	{ mime = "application/x-7z-compressed", run = "ouch" },
 	{ mime = "application/x-rar",           run = "ouch" },
 	{ mime = "application/x-xz",            run = "ouch" },
+  { mime = "{audio,video,image}/*", run = "mediainfo"},
+  { name = "*.csv", run = "rich-preview"}, # for csv files
+  { name = "*.md", run = "rich-preview" }, # for markdown (.md) files
+  { name = "*.rst", run = "rich-preview"}, # for restructured text (.rst) files
+  { name = "*.ipynb", run = "rich-preview"}, # for jupyter notebooks (.ipynb)
+  { name = "*.json", run = "rich-preview"}, # for json (.json) files { mime = "application/subrip", run = "mediainfo" },
+]
+
+prepend_preloaders = [
+  # Replace magick, image, video with mediainfo
+  { mime = "{audio,video,image}/*", run = "mediainfo" },
+  { mime = "application/subrip", run = "mediainfo" },
 ]
 
 [input]
