--- a/.config/bspwm/polybar/forest/user_modules.ini
+++ b/.config/bspwm/polybar/forest/user_modules.ini
@@ -7,6 +7,35 @@
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
+[colors]
+ rosewater = #f5e0dc
+ flamingo = #f2cdcd
+ pink = #f5c2e7
+ mauve = #cba6f7
+ red = #f38ba8
+ maroon = #eba0ac
+ peach = #fab387
+ yellow = #f9e2af
+ green = #a6e3a1
+ teal = #94e2d5
+ sky = #89dceb
+ sapphire = #74c7ec
+ blue = #89b4fa
+ lavender = #b4befe
+ text = #cdd6f4
+ subtext1 = #bac2de
+ subtext0 = #a6adc8
+ overlay2 = #9399b2
+ overlay1 = #7f849c
+ overlay0 = #6c7086
+ surface2 = #585b70
+ surface1 = #45475a
+ surface0 = #313244
+ base = #1e1e2e
+ mantle = #181825
+ crust = #11111b
+ transparent = #FF00000
+
 [module/updates]
 type = custom/script
 
@@ -269,4 +298,13 @@ exec = $HOME/.config/bspwm/polybar/forest/scripts/cava.sh
 format = <label>
 format-font = 5
 label = %output%
-label-foreground = #94e2d5
+label-foreground = ${color.teal}
+
+[module/now-playing]
+type = custom/script
+tail = true
+;format-prefix = ""
+format = <label>
+exec = $HOME/.config/bspwm/polybar/forest/scripts/polybar-now-playing
+click-right = "kill -USR1 $(pgrep --oldest --parent %pid%)"
+label-foreground = ${color.blue}
