--- a/.config/hypr/custom/keybinds.conf
+++ b/.config/hypr/custom/keybinds.conf
@@ -40,12 +40,15 @@ bind = Shift+Alt, 0, exec, ~/.config/ags/scripts/hyprland/workspace_action.sh mo
 # Special workspaces
 bind=ALT,b,movetoworkspace,special:btop
 bind=ALT,m,movetoworkspace,special:music
+bind=ALT,t,movetoworkspace,special:thunderbird
 bind=ALT,o,movetoworkspace,special:hide
 workspace=special:btop,gapsout:150
 workspace=special:music,gapsout:150
+workspace=special:thunderbird,gapsout:100
 
 bind=CTRLALT,b,togglespecialworkspace,btop
 bind=CTRLALT,m,togglespecialworkspace,music
+bind=CTRLALT,t,togglespecialworkspace,thunderbird
 bind=SUPERCTRL,o,togglespecialworkspace,hide
 
 # Windows
