--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -15,5 +15,5 @@ source=~/.config/hypr/custom/execs.conf
 source=~/.config/hypr/custom/general.conf
 source=~/.config/hypr/custom/rules.conf
 source=~/.config/hypr/custom/keybinds.conf
-# source=~/.config/hypr/custom/plugins.conf
+source=~/.config/hypr/custom/plugins.conf
 
