--- a/.config/hypr/custom/keybinds.conf
+++ b/.config/hypr/custom/keybinds.conf
@@ -15,7 +15,9 @@ bind=SUPER,t,exec,foot
 
 # Launchers
 bind=Shift,Space, exec, anyrun
-bind=Ctrl,Space, exec, fuzzel
+bind=Alt,Space, exec, fuzzel
+# bind = Ctrl,Space, exec, true # Open app launcher
+bind = Ctrl, Space, exec, ags_end4 -t 'overview' # Toggle overview/launcher
 
 # Workspace navigation
 bind = Ctrl+Alt, Right, workspace, +1 # [hidden]
