--- a/.config/hypr/hyprland/keybinds.conf
+++ b/.config/hypr/hyprland/keybinds.conf
@@ -16,7 +16,7 @@ bindl = Super ,XF86AudioMute, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 0% # [
 ##! Essentials for beginners
 
 # bind = Super, T, exec, foot # Launch foot (terminal)
-bind = , Super, exec, true # Open app launcher
+# bind = , Super, exec, true # Open app launcher
 bind = Ctrl+Super, T, exec, ~/.config/ags/scripts/color_generation/switchwall.sh # Change wallpaper
 ##! Actions
 # Screenshot, Record, OCR, Color picker, Clipboard history
@@ -144,7 +144,7 @@ bind = Alt, Tab, bringactivetotop, # [hidden] bring it to the top
 bindr = Ctrl+Super, R, exec, killall ags_end4 ydotool; ags_end4 & # Restart widgets
 bindr = Ctrl+Super+Alt, R, exec, hyprctl reload; killall ags_end4 ydotool; ags_end4 & # [hidden]
 bind = Ctrl+Alt, Slash, exec, ags_end4 run-js 'cycleMode();' # Cycle bar mode (normal, focus)
-bindir = Super, Super_L, exec, ags_end4 -t 'overview' # Toggle overview/launcher
+# bindir = Super, Super_L, exec, ags_end4 -t 'overview' # Toggle overview/launcher
 # bind = Super, Tab, exec, ags_end4 -t 'overview' # [hidden]
 bind = Super, Slash, exec, for ((i=0; i<$(hyprctl monitors -j | jq length); i++)); do ags_end4 -t "cheatsheet""$i"; done # Show cheatsheet
 bind = Super, B, exec, ags_end4 -t 'sideleft' # Toggle left sidebar
