--- a/.config/hypr/custom/general.conf
+++ b/.config/hypr/custom/general.conf
@@ -2,9 +2,9 @@
 # Here's a list of every variable: https://wiki.hyprland.org/Configuring/Variables/
 
 general {
-    layout=master
+    layout=hy3
     # Gaps and border
-    gaps_in = 7
+    gaps_in = 5
     gaps_out = 10
     gaps_workspaces = 50
     border_size = 0
@@ -25,7 +25,7 @@ group {
     col.border_active=0x00888888
     col.border_inactive=0x00888888
     groupbar {
-        enabled=false
+        enabled=true
         render_titles=false
         gradients=false
         col.active=0x8c40a02b
@@ -34,7 +34,7 @@ group {
 }
 
 decoration {
-    rounding = 10
+    rounding = 7
     
     blur {
         enabled = true
@@ -74,7 +74,7 @@ decoration {
 master {
     mfact=0.65    
     new_status=inherit
-    new_on_top=true
+    new_on_top=false
 }
 
 dwindle {
