--- a/.config/hypr/custom/plugins.conf
+++ b/.config/hypr/custom/plugins.conf
@@ -1,20 +1,20 @@
 $mainMod = SUPER
 
 # Hyprexpo
-bind = SUPER, grave, hyprexpo:expo, toggle # can be: toggle, off/disable or on/enable
-plugin {
-    hyprexpo {
-        columns = 3
-        gap_size = 5
-        bg_col = rgb(111111)
-        workspace_method = first 1 # [center/first] [workspace] e.g. first 1 or center m+1
-
-        enable_gesture = false # laptop touchpad
-        gesture_fingers = 4  # 3 or 4
-        gesture_distance = 300 # how far is the "max"
-        gesture_positive = true # positive = swipe down. Negative = swipe up.
-    }
-}
+# bind = SUPER, grave, hyprexpo:expo, toggle # can be: toggle, off/disable or on/enable
+# plugin {
+#     hyprexpo {
+#         columns = 3
+#         gap_size = 5
+#         bg_col = rgb(111111)
+#         workspace_method = first 1 # [center/first] [workspace] e.g. first 1 or center m+1
+#
+#         enable_gesture = false # laptop touchpad
+#         gesture_fingers = 4  # 3 or 4
+#         gesture_distance = 300 # how far is the "max"
+#         gesture_positive = true # positive = swipe down. Negative = swipe up.
+#     }
+# }
 
 bind = ALT, grave, overview:toggle
 plugin {
@@ -28,6 +28,21 @@ plugin {
   hyprscrolling {
   }
 }
+
+plugin {
+  hy3 {
+      group_inset = 0
+    }
+  }
+
+bind=SUPER,v,hy3:makegroup, v
+bind=SUPER,b,hy3:makegroup, h
+# bind=SUPER,w,hy3:makegroup, tab
+bind=SUPER,w,hy3:changegroup, toggletab
+bind=SUPER,e,hy3:expand, expand
+bind=SUPER,u,hy3:expand, base
+bind=SUPER,Tab,hy3:focustab, r, wrap
+bind=SUPER+SHIFT,Tab,hy3:focustab, l, wrap
 
 # # bind key to toggle overview (normal)
 # bind = ALT,tab,hycov:toggleoverview
