--- a/.config/hypr/custom/keybinds.conf
+++ b/.config/hypr/custom/keybinds.conf
@@ -10,7 +10,7 @@ bindle=, XF86AudioRaiseVolume, exec, ~/.local/bin/volume_up.sh # [hidden]
 bindle=, XF86AudioLowerVolume, exec, ~/.local/bin/volume_down.sh # [hidden]
 
 # Terminal
-bind=SUPER,RETURN,exec,alacritty
+bind=SUPER,RETURN,exec,ghostty
 bind=SUPER,t,exec,foot
 
 # Launchers
@@ -55,17 +55,32 @@ bind=SUPERCTRL,o,togglespecialworkspace,hide
 
 # Windows
 bind = Alt, Q, killactive,
-bind = Super+Shift, Left, movewindow, l # [hidden]
-bind = Super+Shift, Right, movewindow, r # [hidden]
-bind = Super+Shift, Up, movewindow, u # [hidden]
-bind = Super+Shift, Down, movewindow, d # [hidden]
-bind = Super+Shift, h, movewindow, l # [hidden]
-bind = Super+Shift, l, movewindow, r # [hidden]
-bind = Super+Shift, k, movewindow, u # [hidden]
-bind = Super+Shift, j, movewindow, d # [hidden]
+bind = Super+Shift, Left, hy3:movewindow, l # [hidden]
+bind = Super+Shift, Right, hy3:movewindow, r # [hidden]
+bind = Super+Shift, Up, hy3:movewindow, u # [hidden]
+bind = Super+Shift, Down, hy3:movewindow, d # [hidden]
+bind = Super+Shift, h, hy3:movewindow, l # [hidden]
+bind = Super+Shift, l, hy3:movewindow, r # [hidden]
+bind = Super+Shift, k, hy3:movewindow, u # [hidden]
+bind = Super+Shift, j, hy3:movewindow, d # [hidden]
+
+bind=SUPER,left,hy3:movefocus,l
+bind=SUPER,right,hy3:movefocus,r
+bind=SUPER,up,hy3:movefocus,u
+bind=SUPER,down,hy3:movefocus,d
+bind=SUPER,H,hy3:movefocus,l
+bind=SUPER,L,hy3:movefocus,r
+bind=SUPER,K,hy3:movefocus,u
+bind=SUPER,J,hy3:movefocus,d
 
 bind=CTRLSHIFT,h,movewindow,mon:0
 bind=CTRLSHIFT,l,movewindow,mon:1
+
+binde = Super+Shift, equal, resizeactive, 10 0 # [hidden]
+binde = Super+Shift, minus, resizeactive, -10 0 # [hidden]
+binde = Super+Shift, bracketright, resizeactive, 0 10 # [hidden]
+binde = Super+Shift, bracketleft, resizeactive, 0 -10 # [hidden]
+bind = Super+Shift, Backslash, resizeactive, exact 65% 35% # [hidden]
 
 # Groups
 bind=SUPER,G,togglegroup
