--- a/.config/hypr/hyprland/keybinds.conf
+++ b/.config/hypr/hyprland/keybinds.conf
@@ -20,7 +20,7 @@ bindl = Super ,XF86AudioMute, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 0% # [
 bind = Ctrl+Super, T, exec, ~/.config/ags/scripts/color_generation/switchwall.sh # Change wallpaper
 ##! Actions
 # Screenshot, Record, OCR, Color picker, Clipboard history
-bind = Super, V, exec, pkill fuzzel || cliphist list | fuzzel  --match-mode fzf --dmenu | cliphist decode | wl-copy # Clipboard history >> clipboard
+# bind = Super, V, exec, pkill fuzzel || cliphist list | fuzzel  --match-mode fzf --dmenu | cliphist decode | wl-copy # Clipboard history >> clipboard
 bind = Super, Period, exec, pkill fuzzel || ~/.local/bin/fuzzel-emoji # Pick emoji >> clipboard
 bind = Ctrl+Shift+Alt, Delete, exec, pkill wlogout || wlogout -p layer-shell # [hidden]
 bind = Super+Shift, S, exec, ~/.config/ags/scripts/grimblast.sh --freeze copy area # Screen snip
@@ -48,14 +48,14 @@ bind = Ctrl+Shift+Alt+Super, Delete, exec, systemctl poweroff || loginctl powero
 ##! Window management
 # Focusing
 #/# bind = Super, ←/↑/→/↓,, # Move focus in direction
-bind=SUPER,left,movefocus,l
-bind=SUPER,right,movefocus,r
-bind=SUPER,up,movefocus,u
-bind=SUPER,down,movefocus,d
-bind=SUPER,H,movefocus,l
-bind=SUPER,L,movefocus,r
-bind=SUPER,K,movefocus,u
-bind=SUPER,J,movefocus,d
+# bind=SUPER,left,movefocus,l
+# bind=SUPER,right,movefocus,r
+# bind=SUPER,up,movefocus,u
+# bind=SUPER,down,movefocus,d
+# bind=SUPER,H,movefocus,l
+# bind=SUPER,L,movefocus,r
+# bind=SUPER,K,movefocus,u
+# bind=SUPER,J,movefocus,d
 bind = Super, BracketLeft, movefocus, l # [hidden]
 bind = Super, BracketRight, movefocus, r # [hidden]
 bindm = Super, mouse:272, movewindow
@@ -147,7 +147,7 @@ bind = Ctrl+Alt, Slash, exec, ags_end4 run-js 'cycleMode();' # Cycle bar mode (n
 # bindir = Super, Super_L, exec, ags_end4 -t 'overview' # Toggle overview/launcher
 # bind = Super, Tab, exec, ags_end4 -t 'overview' # [hidden]
 bind = Super, Slash, exec, for ((i=0; i<$(hyprctl monitors -j | jq length); i++)); do ags_end4 -t "cheatsheet""$i"; done # Show cheatsheet
-bind = Super, B, exec, ags_end4 -t 'sideleft' # Toggle left sidebar
+# bind = Super, B, exec, ags_end4 -t 'sideleft' # Toggle left sidebar
 bind = Super, A, exec, ags_end4 -t 'sideleft' # [hidden]
 bind = Super, O, exec, ags_end4 -t 'sideleft' # [hidden]
 bind = Super, N, exec, ags_end4 -t 'sideright' # Toggle right sidebar
@@ -181,11 +181,11 @@ bindl= ,XF86AudioPause, exec, playerctl play-pause # [hidden]
 #!
 ##! Apps
 # bind = Super, T, exec, # Launch foot (terminal)
-bind = Super, Z, exec, Zed # Launch Zed (editor)
+# bind = Super, Z, exec, Zed # Launch Zed (editor)
 bind = Super, C, exec, code --password-store=gnome --enable-features=UseOzonePlatform --ozone-platform=wayland # Launch VSCode (editor)
-bind = Super, E, exec, nautilus --new-window # Launch Nautilus (file manager)
+# bind = Super, E, exec, nautilus --new-window # Launch Nautilus (file manager)
 bind = Super+Alt, E, exec, thunar # [hidden]
-bind = Super, W, exec, google-chrome-stable # [hidden] Let's not give people (more) reason to shit on my rice
+# bind = Super, W, exec, google-chrome-stable # [hidden] Let's not give people (more) reason to shit on my rice
 bind = Ctrl+Super, W, exec, firefox # Launch Firefox (browser)
 bind = Super+Shift, W, exec, wps # Launch WPS Office
 bind = Super, I, exec, XDG_CURRENT_DESKTOP="gnome" gnome-control-center # Launch GNOME Settings
