--- a/.config/hypr/custom/keybinds.conf
+++ b/.config/hypr/custom/keybinds.conf
@@ -38,6 +38,7 @@ bind = Shift+Alt, 7, exec, ~/.config/ags/scripts/hyprland/workspace_action.sh mo
 bind = Shift+Alt, 8, exec, ~/.config/ags/scripts/hyprland/workspace_action.sh movetoworkspacesilent 8 # [hidden]
 bind = Shift+Alt, 9, exec, ~/.config/ags/scripts/hyprland/workspace_action.sh movetoworkspacesilent 9 # [hidden]
 bind = Shift+Alt, 0, exec, ~/.config/ags/scripts/hyprland/workspace_action.sh movetoworkspacesilent 10 # [hidden]
+bind = Super+Alt, F, exec, hyprctl dispatch workspaceopt allfloat
 
 # Special workspaces
 bind=ALT,b,movetoworkspace,special:btop
@@ -55,23 +56,23 @@ bind=SUPERCTRL,o,togglespecialworkspace,hide
 
 # Windows
 bind = Alt, Q, killactive,
-bind = Super+Shift, Left, hy3:movewindow, l # [hidden]
-bind = Super+Shift, Right, hy3:movewindow, r # [hidden]
-bind = Super+Shift, Up, hy3:movewindow, u # [hidden]
-bind = Super+Shift, Down, hy3:movewindow, d # [hidden]
-bind = Super+Shift, h, hy3:movewindow, l # [hidden]
-bind = Super+Shift, l, hy3:movewindow, r # [hidden]
-bind = Super+Shift, k, hy3:movewindow, u # [hidden]
-bind = Super+Shift, j, hy3:movewindow, d # [hidden]
-
-bind=SUPER,left,hy3:movefocus,l
-bind=SUPER,right,hy3:movefocus,r
-bind=SUPER,up,hy3:movefocus,u
-bind=SUPER,down,hy3:movefocus,d
-bind=SUPER,H,hy3:movefocus,l
-bind=SUPER,L,hy3:movefocus,r
-bind=SUPER,K,hy3:movefocus,u
-bind=SUPER,J,hy3:movefocus,d
+# bind = Super+Shift, Left, movewindow, l # [hidden]
+# bind = Super+Shift, Right, movewindow, r # [hidden]
+# bind = Super+Shift, Up, movewindow, u # [hidden]
+# bind = Super+Shift, Down, movewindow, d # [hidden]
+# bind = Super+Shift, h, movewindow, l # [hidden]
+# bind = Super+Shift, l, movewindow, r # [hidden]
+# bind = Super+Shift, k, movewindow, u # [hidden]
+# bind = Super+Shift, j, movewindow, d # [hidden]
+#
+# bind=SUPER,left,movefocus,l
+# bind=SUPER,right,movefocus,r
+# bind=SUPER,up,movefocus,u
+# bind=SUPER,down,movefocus,d
+# bind=SUPER,H,movefocus,l
+# bind=SUPER,L,movefocus,r
+# bind=SUPER,K,movefocus,u
+# bind=SUPER,J,movefocus,d
 
 bind=CTRLSHIFT,h,movewindow,mon:0
 bind=CTRLSHIFT,l,movewindow,mon:1
