--- a/.config/hypr/custom/plugins.conf
+++ b/.config/hypr/custom/plugins.conf
@@ -35,14 +35,42 @@ plugin {
     }
   }
 
+bind = Super+Shift, Left, hy3:movewindow, l # [hidden]
+bind = Super+Shift, Right, hy3:movewindow, r # [hidden]
+bind = Super+Shift, Up, hy3:movewindow, u # [hidden]
+bind = Super+Shift, Down, hy3:movewindow, d # [hidden]
+bind = Super+Shift, h, hy3:movewindow, l # [hidden]
+bind = Super+Shift, l, hy3:movewindow, r # [hidden]
+bind = Super+Shift, k, hy3:movewindow, u # [hidden]
+bind = Super+Shift, j, hy3:movewindow, d # [hidden]
+
+bind=SUPER,left,hy3:movefocus,l
+bind=SUPER,right,hy3:movefocus,r
+bind=SUPER,up,hy3:movefocus,u
+bind=SUPER,down,hy3:movefocus,d
+bind=SUPER,H,hy3:movefocus,l
+bind=SUPER,L,hy3:movefocus,r
+bind=SUPER,K,hy3:movefocus,u
+bind=SUPER,J,hy3:movefocus,d
+bind=ALT,left,hy3:movefocus,l, visible
+bind=ALT,right,hy3:movefocus,r, visible
+bind=ALT,up,hy3:movefocus,u, visible
+bind=ALT,down,hy3:movefocus,d, visible
+bind=ALT,H,hy3:movefocus,l, visible
+bind=ALT,L,hy3:movefocus,r, visible
+bind=ALT,K,hy3:movefocus,u, visible
+bind=ALT,J,hy3:movefocus,d, visible
 bind=SUPER,v,hy3:makegroup, v
 bind=SUPER,b,hy3:makegroup, h
+
 # bind=SUPER,w,hy3:makegroup, tab
 bind=SUPER,w,hy3:changegroup, toggletab
 bind=SUPER,e,hy3:expand, expand
 bind=SUPER,u,hy3:expand, base
 bind=SUPER,Tab,hy3:focustab, r, wrap
 bind=SUPER+SHIFT,Tab,hy3:focustab, l, wrap
+bind=SUPER,grave,hy3:locktab, lock
+bind=SUPER+SHIFT,grave,hy3:locktab, unlock
 
 # # bind key to toggle overview (normal)
 # bind = ALT,tab,hycov:toggleoverview
