--- a/.config/hypr/custom/plugins.conf
+++ b/.config/hypr/custom/plugins.conf
@@ -1,28 +1,28 @@
 $mainMod = SUPER
 
 # Hyprexpo
-# bind = SUPER, grave, hyprexpo:expo, toggle # can be: toggle, off/disable or on/enable
-# plugin {
-#     hyprexpo {
-#         columns = 3
-#         gap_size = 5
-#         bg_col = rgb(111111)
-#         workspace_method = first 1 # [center/first] [workspace] e.g. first 1 or center m+1
-#
-#         enable_gesture = false # laptop touchpad
-#         gesture_fingers = 4  # 3 or 4
-#         gesture_distance = 300 # how far is the "max"
-#         gesture_positive = true # positive = swipe down. Negative = swipe up.
-#     }
-# }
-
-bind = ALT, grave, overview:toggle
+bind = SUPER, grave, hyprexpo:expo, toggle # can be: toggle, off/disable or on/enable
 plugin {
-  overview {
-    drawActiveWorkspace = true    
-    centerAligned = true
-  }
+    hyprexpo {
+        columns = 3
+        gap_size = 5
+        bg_col = rgb(111111)
+        workspace_method = first 1 # [center/first] [workspace] e.g. first 1 or center m+1
+
+        enable_gesture = false # laptop touchpad
+        gesture_fingers = 4  # 3 or 4
+        gesture_distance = 300 # how far is the "max"
+        gesture_positive = true # positive = swipe down. Negative = swipe up.
+    }
 }
+
+# bind = ALT, grave, overview:toggle
+# plugin {
+#   overview {
+#     drawActiveWorkspace = true    
+#     centerAligned = true
+#   }
+# }
 
 plugin {
   hyprscrolling {
@@ -52,19 +52,21 @@ bind=SUPER,H,hy3:movefocus,l
 bind=SUPER,L,hy3:movefocus,r
 bind=SUPER,K,hy3:movefocus,u
 bind=SUPER,J,hy3:movefocus,d
-bind=ALT,left,hy3:movefocus,l, visible
-bind=ALT,right,hy3:movefocus,r, visible
-bind=ALT,up,hy3:movefocus,u, visible
-bind=ALT,down,hy3:movefocus,d, visible
-bind=ALT,H,hy3:movefocus,l, visible
-bind=ALT,L,hy3:movefocus,r, visible
-bind=ALT,K,hy3:movefocus,u, visible
-bind=ALT,J,hy3:movefocus,d, visible
+bind=SUPER+ALT,left,hy3:movefocus,l, visible
+bind=SUPER+ALT,right,hy3:movefocus,r, visible
+bind=SUPER+ALT,up,hy3:movefocus,u, visible
+bind=SUPER+ALT,down,hy3:movefocus,d, visible
+bind=SUPER+ALT,H,hy3:movefocus,l, visible
+bind=SUPER+ALT,L,hy3:movefocus,r, visible
+bind=SUPER+ALT,K,hy3:movefocus,u, visible
+bind=SUPER+ALT,J,hy3:movefocus,d, visible
+
 bind=SUPER,v,hy3:makegroup, v
 bind=SUPER,b,hy3:makegroup, h
-
-# bind=SUPER,w,hy3:makegroup, tab
+bind=CTRL+SUPER,w,hy3:makegroup, tab
 bind=SUPER,w,hy3:changegroup, toggletab
+bind=SUPER,a,hy3:setephemeral, true
+
 bind=SUPER,e,hy3:expand, expand
 bind=SUPER,u,hy3:expand, base
 bind=SUPER,Tab,hy3:focustab, r, wrap
