--- a/.config/hypr/hyprland/keybinds.conf
+++ b/.config/hypr/hyprland/keybinds.conf
@@ -148,7 +148,7 @@ bind = Ctrl+Alt, Slash, exec, ags_end4 run-js 'cycleMode();' # Cycle bar mode (n
 # bind = Super, Tab, exec, ags_end4 -t 'overview' # [hidden]
 bind = Super, Slash, exec, for ((i=0; i<$(hyprctl monitors -j | jq length); i++)); do ags_end4 -t "cheatsheet""$i"; done # Show cheatsheet
 # bind = Super, B, exec, ags_end4 -t 'sideleft' # Toggle left sidebar
-bind = Super, A, exec, ags_end4 -t 'sideleft' # [hidden]
+# bind = Super, A, exec, ags_end4 -t 'sideleft' # [hidden]
 bind = Super, O, exec, ags_end4 -t 'sideleft' # [hidden]
 bind = Super, N, exec, ags_end4 -t 'sideright' # Toggle right sidebar
 bind = Super, M, exec, ags_end4 run-js 'openMusicControls.value = (!mpris.getPlayer() ? false : !openMusicControls.value);' # Toggle music controls
@@ -186,7 +186,7 @@ bind = Super, C, exec, code --password-store=gnome --enable-features=UseOzonePla
 # bind = Super, E, exec, nautilus --new-window # Launch Nautilus (file manager)
 bind = Super+Alt, E, exec, thunar # [hidden]
 # bind = Super, W, exec, google-chrome-stable # [hidden] Let's not give people (more) reason to shit on my rice
-bind = Ctrl+Super, W, exec, firefox # Launch Firefox (browser)
+# bind = Ctrl+Super, W, exec, firefox # Launch Firefox (browser)
 bind = Super+Shift, W, exec, wps # Launch WPS Office
 bind = Super, I, exec, XDG_CURRENT_DESKTOP="gnome" gnome-control-center # Launch GNOME Settings
 bind = Ctrl+Super, V, exec, pavucontrol # Launch pavucontrol (volume mixer)
