--- a/.config/hypr/custom/general.conf
+++ b/.config/hypr/custom/general.conf
@@ -108,3 +108,4 @@ workspace = 17, monitor:HDMI-A-1, default:true
 workspace = 18, monitor:HDMI-A-1, default:true
 workspace = 19, monitor:HDMI-A-1, default:true
 workspace = 20, monitor:HDMI-A-1, default:true
+decoration:blur:passes = 3
