--- a/.config/hypr/hyprland/general.conf
+++ b/.config/hypr/hyprland/general.conf
@@ -1,5 +1,5 @@
 # MONITOR CONFIG
-monitor=,preferred,auto,1
+monitor=,preferred,auto-right,1
 # monitor=,addreserved, 0, 0, 0, 0 # Custom reserved area
 
 # HDMI port: mirror display. To see device name, use `hyprctl monitors`
